# 3dep-explorer

./: .gitignore  .gitmodules  3dep_explorer.ipynb  CMakeLists.txt  README.md  build.sh  downloadlist.txt  requirements.txt  setup_environment.sh
cpp/pybind/: pybind_definitions.cpp
cpp/src/: VoxelGenerator.cpp  VoxelGenerator.h  pybind_definitions.cpp
cpp/test/: VoxelGeneratorTest.cpp
src/: filter.cpp
